<resources>

    <string name="messages_header" translatable="false">Message</string>
    <string name="signature_title" translatable="false">Signature</string>
    <string name="reply_title" translatable="false">Reply</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="sync_title" translatable="false">Sync</string>
    <string name="attachment_title" translatable="false">Attachment</string>
    <string name="attachment_summary_on" translatable="false">Summary On</string>
    <string name="attachment_summary_off" translatable="false">Summary Off</string>

    <!-- Main Activity -->
    <string name="app_name" translatable="false">125 Irregular Verbs</string>
    <string name="practice_button" translatable="false">Practice</string>
    <string name="dict_button" translatable="false">Dictionary</string>
    <string name="progress" translatable="false">Daily Goal:</string>
    <string name="avg_score" translatable="false">Average Score</string>
    <string name="goals_completion" translatable="false">Goals Completed</string>
    <string name="max_score" translatable="false">Best Score</string>
    <string name="goal_excuse" translatable="false">Get some rest!</string>
    <string name="bug_report" translatable="false">Report a problem</string>

    <!-- Settings Activity -->
    <string name="settings" translatable="false">Manage application settings</string>
    <string name="is_there_goal" translatable="false">Daily goals</string>
    <string name="mon" translatable="false">M</string>
    <string name="tue" translatable="false">T</string>
    <string name="wed" translatable="false">W</string>
    <string name="thu" translatable="false">T</string>
    <string name="fri" translatable="false">F</string>
    <string name="sat" translatable="false">S</string>
    <string name="sun" translatable="false">S</string>
    <string name="decrease_descr" translatable="false">Decrease the number of target practices per day</string>
    <string name="increase_descr" translatable="false">Increase the number of target practices per day</string>
    <string name="days_descr" translatable="false">On what days of week do you want to practice?</string>
    <string name="days_label" translatable="false">Practice days</string>
    <string name="goal_size" translatable="false">Number of tests per day</string>
    <string name="reminder_switch" translatable="false">Reminders</string>
    <string name="reminder_time" translatable="false">Reminder time</string>
    <string name="questions_number" translatable="false">Number of questions per test</string>
    <string name="decrease_descr_q" translatable="false">Decrease the number of questions per test</string>
    <string name="increase_descr_q" translatable="false">Increase the number of questions per test</string>
    <string name="save_button" translatable="false">Save</string>
    <string name="default_button" translatable="false">Cancel</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="test_content_label" translatable="false">Test content</string>
    <string name="test_content_1" translatable="false">100% multiple choice</string>
    <string name="test_content_2" translatable="false">100% written response</string>
    <string name="test_content_3" translatable="false">50% multiple choice, 50% written response</string>
    <string name="test_range" translatable="false">Which verbs are on your tests</string>
    <string name="ask" translatable="false">Ask before every test</string>
    <string name="up" translatable="false">+</string>
    <string name="down" translatable="false">-</string>

    <!-- Report Activity -->
    <string name="type" translatable="false">Problem type:</string>
    <string name="description_hint" translatable="false">Please describe the problem</string>
    <string name="thanks" translatable="false">Thank you for letting us know!</string>
    <string name="type1" translatable="false">A technical issue</string>
    <string name="type2" translatable="false">Wrong information</string>
    <string name="type3" translatable="false">Other</string>
    <string name="submit_button" translatable="false">Submit</string>
    <string name="num_words" translatable="false">Please write between 50 and 1000 symbols</string>

    <!-- Test Activity -->
    <string name="answer_hint" translatable="false">Your answer</string>
    <string name="disclaimer" translatable="false">If there are two or more correct answers, please list them separated by \"/\" without spaces.\nDo not specify which \"lie\" you mean</string>
    <string name="question_type1" translatable="false">Past Simple of</string>
    <string name="question_type2" translatable="false">Past Participle of</string>
    <string name="question_type3" translatable="false">Infinitive of</string>
    <string name="from" translatable="false">from</string>
    <string name="to" translatable="false">to</string>
    <string name="setup_instructions" translatable="false">- The verbs in our dictionary are numbered. Please specify the range from which we can choose random verbs to include in your tests (e.g. if you choose from 1 to 10, verbs from the 1st to the 10th, inclusive, will appear on your tests)</string>
    <string name="error_to_few_verbs" translatable="false">- The number of verbs in the range cannot be smaller than the number of questions</string>
    <string name="dont_ask" translatable="false">Don\'t ask again</string>
    <string name="res0" translatable="false">Wow! Perfect Score!</string>
    <string name="res1" translatable="false">Outstanding!</string>
    <string name="res2" translatable="false">Great work!</string>
    <string name="res3" translatable="false">Good</string>
    <string name="res4" translatable="false">Keep trying</string>
    <string name="proceed" translatable="false">Proceed</string>
    <string name="info" translatable="false">\?</string>
    <string name="close" translatable="false">close</string>

    <!-- Dictionary Activity -->
    <string name="inf" translatable="false">Infinitive</string>
    <string name="ps" translatable="false">Past Simple</string>
    <string name="pp" translatable="false">Past Participle</string>
    <string name="no" translatable="false">№</string>
</resources>