<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/settings"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/stats_background"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/goal_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/progress"
                android:textColor="?android:attr/colorForeground"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dismiss_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stats_background"
                android:backgroundTint="?attr/colorSecondary"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/goal_excuse"
                android:textColor="?android:attr/colorForeground"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goal_completed"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stats_background"
                android:backgroundTint="?attr/colorSecondary"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="Completed!"
                android:textColor="?android:attr/colorForeground"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:indeterminateBehavior="repeat"
                android:indeterminateDrawable="@drawable/progressbar1"
                android:progress="60"
                android:progressDrawable="@drawable/progressbar1"
                android:visibility="gone" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/stats_background"
                android:backgroundTint="?attr/colorSecondary"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/Base.Theme.IrregularVerbs"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
                app:layout_constraintStart_toEndOf="@+id/linearLayout6"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/avg_score_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/avg_score"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="20sp"
                    android:theme="@style/Base.Theme.IrregularVerbs" />

                <TextView
                    android:id="@+id/avg_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="100%"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/stats_background"
                android:backgroundTint="?attr/colorSecondary"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/high_score_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/max_score"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="20sp"
                    android:theme="@style/Base.Theme.IrregularVerbs" />

                <TextView
                    android:id="@+id/high_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="100%"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="34sp"
                    android:theme="@style/Base.Theme.IrregularVerbs" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/stats_background"
                android:backgroundTint="?attr/colorSecondary"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout7"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/goals_percent_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/goals_completion"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/goals_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="100%"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="34sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:measureWithLargestChild="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/practice_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/practice_button"
            android:textColor="?android:attr/colorForeground"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dict_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/dict_button"
            android:textColor="?android:attr/colorForeground"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />
</androidx.constraintlayout.widget.ConstraintLayout>